k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gym-pro-api-svc
  namespace: gym-pro
  labels:
    app: gym-pro-api
spec:
  selector:
    app: gym-pro-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
